<resources>
    <string name="app_name">Canvas_Phutran</string>
    <string name="todo">TODO</string>
    <string name="list">ListBaiTap</string>
    <string name="exercise1">W1-D3-View and Group View</string>
    <string name="beat">Beatrice Maxwell</string>
    <string name="profile">Profile</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="post">Posts</string>
    <string name="news">News</string>
    <string name="slovakia">Slovakia</string>
    <string name="content">content</string>
    <string name="loading">loading</string>
    <string name="exercise2">Event - Listener</string>
    <string name="inputUser">Username</string>
    <string name="inputPassword">Password</string>
    <string name="inputEmail">Email</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="sub">Email subscriptions</string>
    <string name="allow">Allow email from other</string>
    <string name="title">SignUpActivity</string>
    <string name="off">OFF</string>
    <string name="on">ON</string>
    <string name="max">18</string>
    <string name="errorInputEmail">Lỗi cú pháp email</string>
    <string name="errorInput">Vui lòng nhập ít nhất 6 kí tự</string>
    <string name="errorInputPassword">Vui lòng nhập kí tự và số</string>
    <string name="inputPass">Password</string>
    <string name="confirmPass">Confirm Password</string>
    <string name="sign_up">Signup?</string>
    <string name="titleInput">Please input email and password:</string>
    <string name="titleResult">Your email and password:</string>
    <string name="login">login</string>
    <string name="signUp">SIGN UP</string>
    <string name="checkInput">Please check your email and password</string>
    <string name="checkInputSignUp">Please check again</string>
    <string name="exercise3">Fragment</string>
    <string name="success">success !</string>
    <string name="username">Trần Thị Thanh</string>
    <string name="comment">Đẹp lắm</string>
    <string name="like">like</string>
    <string name="likes">likes</string>
    <string name="abc">abc</string>
    <string name="exercise4">RecyclerView</string>
    <string name="timeline">timeline</string>
    <string name="favourite">favourite</string>
    <string name="exercise5">viewpager</string>
    <string name="exercise9">Canvas</string>
    <string name="thousan">,000</string>
    <string name="zero">$0</string>
    <string name="dola">$</string>
    <string name="Jan">Jan</string>
    <string name="Feb">Feb</string>
    <string name="Mar">Mar</string>
    <string name="Apr">Apr</string>
    <string name="May">May</string>
    <string name="June">June</string>
    <string name="Jul">Jul</string>
    <string name="Aug">Aug</string>
    <string name="Sep">Sep</string>
    <string name="Oct">Oct</string>
    <string name="Nov">Nov</string>
    <string name="Dec">Dec</string>
    <string name="saleAndExpense">Sales and Expenses</string>
    <string name="sale">Sales</string>
    <string name="expense">Expenses</string>
    <string name="defaulString">$1,000,000</string>
    <string name="asyncTask">AsyncTask</string>
    <string name="thread">Thread</string>
    <string name="handler">Handler</string>
    <string name="exercise11">AsyncTask</string>
    <string name="download_image">Download image</string>
    <string name="image">downloaded_image.jpg</string>
    <string name="complete">Download complete</string>
    <string name="interruptedException">InterruptedException:</string>
    <string name="exception">Exception</string>
    <string name="exercise8">retrofit</string>
    <string name="imageLoaded">image loaded</string>
    <string name="insertImage">insert image</string>
    <string name="gallery">Select photo from gallery</string>
    <string name="camera">Capture photo from camera</string>
    <string name="action">Select Action</string>
    <string name="data">data</string>
    <string name="titles">Title</string>
    <string name="commentImage">this is picture</string>
    <string name="deny">deny</string>
    <string name="show">isShow</string>
    <string name="optionChoose">Please choose</string>
    <string name="noteAccess">App needs to access the </string>
    <string name="setting">SETTINGS</string>
    <string name="cancel">don\'t allow</string>
    <string name="noteGallery">gallery</string>
    <string name="noteCamera">camera</string>
    <string name="isWrite">isWrite</string>
    <string name="isCamera">isCamera</string>
    <string name="exercise10">unit test</string>
    <string name="socialAccount">or log in using a social account</string>
    <string name="askAccount">Don\'t have a account yet?</string>
    <string name="askPassword">Forgot your password ?</string>
    <string name="pleaseInput">please input username or password</string>
    <string name="input">Input</string>
    <string name="tranthithuthao">Tran Thi Thu Thao</string>
    <string name="exercise7">Drawer - Layout</string>
    <string name="inbox">Inbox</string>
    <string name="outbox">Outbox</string>
    <string name="trash">Trash</string>
    <string name="spam">Spam</string>
    <string name="permission">All permissions are granted by user!</string>
    <string name="sharePreference">Share reference</string>
    <string name="storage">Storage</string>
    <string name="database">Database</string>
    <string name="inputUsername">input username</string>
    <string name="password">Password</string>
    <string name="internalStorage">Internal</string>
    <string name="externalStorage">External</string>
    <string name="clearData">reset</string>
    <string name="user_key">username</string>
    <string name="pass_key">password</string>
    <string name="space" />
    <string name="exercise6">storage</string>
    <string name="listCompany">Danh sách công ty</string>
    <string name="inputIdEmployee">Input ID</string>
    <string name="inputNameEmployee">Input Name</string>
    <string name="inputEmployee">Please input employee of </string>
    <string name="insert">insert</string>
    <string name="update">update</string>
    <string name="delete">delete</string>
    <string name="listEmployee">List name employee of</string>
    <string name="updateEmployee">Update employee</string>
    <string name="successful">successful</string>
    <string name="error">error</string>
    <string name="noteInputEmployee">please input name of Employee</string>
    <string name="empty">Employee is empty!</string>
    <string name="asiantech">Asiantech</string>
    <string name="logigear">Logigear</string>
    <string name="fpt">Fpt</string>
    <string name="mgm">MGM</string>
    <string name="zenken">Zenken</string>
    <string name="enclave">Enclave</string>
    <string name="employeeExist">employee is existing</string>
    <string name="userInfor">UserInfor</string>
    <string name="save">saved</string>
    <string name="valueEmail">valueEmail</string>
    <string name="valuePassword">valuePassword</string>
    <string name="exercise14">kotlin</string>
    <string name="exerciseKotlin">kotlin</string>
    <string name="exerciseJava">java</string>
</resources>
