<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".viewandviewgroup.ListActivity">

    <Button
        android:id="@+id/btnExercise1"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/shape"
        android:text="@string/exercise1" />

    <Button
        android:id="@+id/btnExercise2"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/shape"
        android:text="@string/exercise2" />

    <Button
        android:id="@+id/btnExercise3"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/shape"
        android:text="@string/exercise3" />

    <Button
        android:id="@+id/btnExercise4"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/shape"
        android:text="@string/exercise4" />

    <Button
        android:id="@+id/btnExercise5"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/shape"
        android:text="@string/exercise5" />

    <Button
        android:id="@+id/btnExercise9"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/shape"
        android:text="@string/exercise9" />

    <Button
        android:id="@+id/btnExercise8"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/shape"
        android:text="@string/exercise8" />

    <Button
        android:id="@+id/btnExercise11"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/shape"
        android:text="@string/exercise11" />

    <Button
        android:id="@+id/btnExercise10"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/shape"
        android:text="@string/exercise10" />

    <Button
        android:id="@+id/btnExercise7"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/shape"
        android:text="@string/exercise7" />

    <Button
        android:id="@+id/btnExercise6"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/shape"
        android:text="@string/exercise6" />

    <Button
        android:id="@+id/btnExercise12"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/shape"
        android:text="@string/exercise12" />
</LinearLayout>
