<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/username"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/edtInputUser"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/inputUsername"
            android:layout_weight="2"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:layout_weight="1"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/edtInputPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/inputPassword"
            android:layout_weight="2" />
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">
        <Button
            android:id="@+id/btnLogin"
            android:layout_gravity="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/btnClearData"
            android:layout_gravity="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/clearData"/>
    </LinearLayout>
</LinearLayout>