<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    tools:context="asiantech.internship.summer.SignUpActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/colorBlack">
        <ImageView
            android:layout_width="0dp"
            android:layout_height="25dp"
            android:layout_weight="1"
            android:background="@drawable/ic_four"
            android:layout_gravity="center" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="@string/app_name1"
            android:textColor="@color/colorWhite"
            android:layout_weight="10"
            android:layout_gravity="center"/>
        <Button
            android:id="@+id/btn_check"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_check_white_36dp"
            android:layout_weight="1"
            android:layout_gravity="center"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">
        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/img_people"/>
        <EditText
            android:id="@+id/edtUser"
            android:hint="@string/inputUser"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:maxLength="@string/max"/>
        <EditText
            android:id="@+id/edtPass"
            android:hint="@string/inputPassword"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:maxLength="@string/max"/>
        <EditText
            android:id="@+id/edtEmail"
            android:hint="@string/inputEmail"
            android:layout_width="200dp"
            android:layout_height="wrap_content"/>
        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:id="@+id/rd_genaral"
            android:layout_marginLeft="-20dp">
            <RadioButton android:id="@+id/rd_pirates"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male"
                android:textSize="18sp"
                android:onClick="onRadioButtonClicked"
                tools:ignore="OnClick" />
            <RadioButton android:id="@+id/rd_ninjas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female"
                android:textSize="18sp"
                android:onClick="onRadioButtonClicked"
                tools:ignore="OnClick" />
        </RadioGroup>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/sub"
                android:textSize="20sp"
                android:layout_weight="2"/>
            <ToggleButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textOff="@string/off"
                android:textOn="@string/on"
                android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/allow"
                android:textSize="20sp"
                android:layout_weight="2"/>
            <ToggleButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textOff="@string/off"
                android:textOn="@string/on"
                android:layout_weight="1"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
