<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="asiantech.internship.summer.menu.ListActivityKotlin">

    <Button
        android:id="@+id/btnExercise00"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/shape"
        android:text="@string/exercise2" />

    <Button
        android:id="@+id/btnExercise11"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/shape"
        android:text="@string/exercise3" />

    <Button
        android:id="@+id/btnExercise22"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/shape"
        android:text="@string/exercise8" />
</LinearLayout>
