<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="asiantech.internship.summer.asynctask.AsyncTaskThreadHandlerActivity">
    <android.support.design.widget.TabLayout
        android:id="@+id/tabLayoutHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TabItem
            android:id="@+id/tabLayoutAsyncTask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/asyncTask"/>
        <android.support.design.widget.TabItem
            android:id="@+id/tabLayoutThread"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thread"/>
        <android.support.design.widget.TabItem
            android:id="@+id/tabLayoutHandler"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/handler"/>
    </android.support.design.widget.TabLayout>
    <android.support.v4.view.ViewPager
        android:id="@+id/viewPagerContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </android.support.v4.view.ViewPager>
</LinearLayout>
