<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".file_storage.FileStorageActivity">

    <android.support.design.widget.TabLayout
        android:id="@+id/tabLayoutHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorSkyBlue"
        app:tabGravity="fill"
        app:tabMode="fixed"
        app:tabSelectedTextColor="@color/colorPrimary"
        app:tabTextColor="@color/colorWhite">

        <android.support.design.widget.TabItem
            android:id="@+id/tabSharePreference"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sharePreference" />

        <android.support.design.widget.TabItem
            android:id="@+id/tabStorage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/storage" />

        <android.support.design.widget.TabItem
            android:id="@+id/tabDatabase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/database" />
    </android.support.design.widget.TabLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/viewPagerContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>
